--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/irvingjem/poke-builder-V2#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "handlebars": "^4.7.7",
+    "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   }
