adding poke promise to project

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "pokedex-promise-v2": "^4.0.0",
     "sequelize": "^6.19.0"
   }
 }
