--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "npm run nodemon"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
     "pokedex-promise-v2": "^4.0.0",
     "sequelize": "^6.19.0"
   }
