--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express-handlebars": "^6.0.5",
         "express-session": "^1.17.2",
         "mysql2": "^2.3.3",
+        "nodemon": "^2.0.16",
         "pokedex-promise-v2": "^4.0.0",
         "sequelize": "^6.19.0"
     }
